seaqt/QtPdf/gen_qpdfsearchresult.h

class QMetaObject;
class QPdfSearchResult;
class QRectF;
typedef struct QMetaObject QMetaObject;
typedef struct QPdfSearchResult QPdfSearchResult;
typedef struct QRectF QRectF;
QPdfSearchResult* QPdfSearchResult_new();
QPdfSearchResult* QPdfSearchResult_new2(QPdfSearchResult* param1);
struct seaqt_string QPdfSearchResult_contextBefore(const QPdfSearchResult* self);
struct seaqt_string QPdfSearchResult_contextAfter(const QPdfSearchResult* self);
struct seaqt_array /* of QRectF* */  QPdfSearchResult_rectangles(const QPdfSearchResult* self);
void QPdfSearchResult_operatorAssign(QPdfSearchResult* self, QPdfSearchResult* param1);
const QMetaObject* QPdfSearchResult_staticMetaObject();
void QPdfSearchResult_delete(QPdfSearchResult* self);